# PAMparametrizer

./: .gitignore  .readthedocs.yml  README.md  mkdocs.yml.bak  output.txt  requirements.txt  selected_rows.csv
Figures/: README.md  (+2 more)
Modules/: README.md  __init__.py  pyproject.toml  requirements.txt
Modules/Genetic-algorithm-suite-main/: .gitignore  README.md  setup.cfg  setup.py
Modules/Genetic-algorithm-suite-main/examples/: metabolic_genes_reduction.py  minimal_example.py  minimal_example_restart.py
Modules/PAM_parametrization/: Parametrization_method_oob.py  requirements.txt
Modules/PAM_parametrization/genetic_algorithm_parametrization/: README.md  core_parametrization.py  ga_param.py
Modules/PAM_parametrizer/: KcatConstraintConfig.py  PAM_data_classes.py  README.md  pam_parametrizer.py
Modules/PAMparametrizer/: __init__.py
Modules/PAMparametrizer/PAM_parametrizer/: KcatConstraintConfig.py  PAM_data_classes.py  __init__.py  pam_parametrizer.py
Modules/PAMparametrizer/genetic_algorithm_parametrization/: __init__.py
Modules/PAMparametrizer/utils/: genetic_algorithm_analysis.py  pam_generation.py  pamparametrizer_analysis.py  pamparametrizer_setup.py  sector_config_functions.py
Modules/genetic_algorithm_parametrization/: README.md  __init__.py  core_parametrization_gaussian.py  core_parametrization_uniform.py  ga_param.py  setup.cfg  setup.py
Modules/genetic_algorithm_parametrization/Evaluation/: Fitfun_params_gaussian.py  Fitfun_params_uniform.py
Modules/genetic_algorithm_parametrization/Evaluation.egg-info/: SOURCES.txt
Modules/genetic_algorithm_parametrization/genetic_algorithm_parametrization.egg-info/: SOURCES.txt
Modules/utils/: __init__.py  custom_gurobi_model.py  error_calculation.py  genetic_algorithm_analysis.py  pam_generation.py  pamparametrizer_analysis.py  pamparametrizer_setup.py  pamparametrizer_visualization.py  preprocessing.py  sampling_functions.py  sector_config_functions.py
(+733 files in other folders)
