[project]
name = "PAMparametrizer"
version = "0.1.0"
description = "Parametrization framework for creating protein allocation models"
authors = [{name = 'Samira van den Bogaard'}]
readme = "README.md"
requires-python = '>=3.9, <3.12'

dependencies = [
    "matplotlib",
    "gurobipy",
    "PAModelpy",
    "deap==1.4.*",
    "scipy"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#packages = ["genetic_algorithm_parametrization", "PAM_parametrizer", "utils"]
[tool.setuptools.packages.find]
where = ["."]
