[metadata]
version = 1.0
name = genetic_algorithm_parametrization
author = Samira van den Bogaard
author_email = samira.vandenbogaard@rwth-aachen.de
description = Parameter optimization in Protein Allocation Models
license = MIT

[options]
install_requires =
    cobra~=0.25.0
    gurobipy~=9.5.2
    deap~=1.3.1
    pandas~=1.4.3
    numpy~=1.23.2
    XlsxWriter~=3.0.3
    openpyxl
    
package_dir =
    =src
    
packages = find:   

python_requires = >=3.8 

[options.packages.find]
where=src

[options.package_data]
Data =
    *.xlsx
Models =
    *.json
